correct deprecated create instance